compiler/myCompilerParser.java
// $ANTLR 3.5.2 myCompiler.g 2018-06-27 20:59:35

    // import packages here.
    import java.util.HashMap;
    import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class myCompilerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHAR", "COMMENT", "EscapeSequence", 
		"FLOAT", "Floating_point_constant", "IF", "INT", "Identifier", "Integer_constant", 
		"STRING_LITERAL", "VOID", "WS", "'('", "')'", "'*'", "'+'", "','", "'-'", 
		"'/'", "';'", "'='", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int CHAR=4;
	public static final int COMMENT=5;
	public static final int EscapeSequence=6;
	public static final int FLOAT=7;
	public static final int Floating_point_constant=8;
	public static final int IF=9;
	public static final int INT=10;
	public static final int Identifier=11;
	public static final int Integer_constant=12;
	public static final int STRING_LITERAL=13;
	public static final int VOID=14;
	public static final int WS=15;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public myCompilerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public myCompilerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return myCompilerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "myCompiler.g"; }


	    boolean TRACEON = false;
	    HashMap<String,Integer> symtab = new HashMap<String,Integer>();
		HashMap<String,Integer> memory = new HashMap<String,Integer>();
	    int labelCount = 0;

		  /*
	    public enum TypeInfo {
	    StringConstant,
	    Integer,
			Float,
			Unknown,
			No_Exist,
			Error
	    }
	    */

	    /* attr_type:
	       1 => integer,
	       2 => float,
	       3 => String constant,
	       -1 => do not exist,
	       -2 => error
	     */
	     
	    List<String> DataCode = new ArrayList<String>();
	    List<String> TextCode = new ArrayList<String>();
	 
	    public static register reg = new register(0, 10);
	    
	    /*
	     * Output prologue.
	     */
	    void prologue(String id)
	    {
	   	   TextCode.add("\n\n/* Text section */");
	       TextCode.add("\t.section .text");
	       TextCode.add("\t.global " + id);
	       TextCode.add("\t.type " + id + ",@function");
	       TextCode.add(id + ":");
	       
	       /* Follow x86 calling convention */
	       TextCode.add("\t pushq %rbp");
	       TextCode.add("\t movq %rsp,%rbp");
	       TextCode.add("\t pushq %rbx"); //callee saved registers.
	       TextCode.add("\t pushq %r12"); //callee saved registers.
	       TextCode.add("\t pushq %r13"); //callee saved registers.
	       TextCode.add("\t pushq %r14"); //callee saved registers.
	       TextCode.add("\t pushq %r15"); //callee saved registers.
	       TextCode.add("\t subq $8,%rsp\n"); // aligned 16-byte boundary.
	    }
	    
	    /*
	     * Output epilogue.
	     */
	    void epilogue()
	    {
	       /* handle epilogue */
	       
	       /* Follow x86 calling convention */
	       TextCode.add("\n\t addq $8,%rsp");
	       TextCode.add("\t popq %r15");
	       TextCode.add("\t popq %r14");
	       TextCode.add("\t popq %r13");
	       TextCode.add("\t popq %r12");
	       TextCode.add("\t popq %rbx");
	       TextCode.add("\t popq %rbp");
		     TextCode.add("\t ret");
	    }
	    
	    
	    /* Generate a new label */
	    String newLabel()
	    {
	       labelCount ++;
	       return (new String("L")) + Integer.toString(labelCount);
	    } 
	    
	    
	    public List<String> getDataCode()
	    {
	       return DataCode;
	    }
	    
	    public List<String> getTextCode()
	    {
	       return TextCode;
	    }



	// $ANTLR start "program"
	// myCompiler.g:104:1: program : declarations functions ;
	public final void program() throws RecognitionException {
		try {
			// myCompiler.g:105:5: ( declarations functions )
			// myCompiler.g:105:7: declarations functions
			{
			pushFollow(FOLLOW_declarations_in_program43);
			declarations();
			state._fsp--;

			pushFollow(FOLLOW_functions_in_program45);
			functions();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "functions"
	// myCompiler.g:109:1: functions : ( function functions |);
	public final void functions() throws RecognitionException {
		try {
			// myCompiler.g:110:5: ( function functions |)
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==CHAR||LA1_0==FLOAT||LA1_0==INT||LA1_0==VOID) ) {
				alt1=1;
			}
			else if ( (LA1_0==EOF) ) {
				alt1=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// myCompiler.g:110:7: function functions
					{
					pushFollow(FOLLOW_function_in_functions63);
					function();
					state._fsp--;

					pushFollow(FOLLOW_functions_in_functions65);
					functions();
					state._fsp--;

					}
					break;
				case 2 :
					// myCompiler.g:112:5: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "functions"



	// $ANTLR start "function"
	// myCompiler.g:114:1: function : type Identifier '(' ')' '{' l_declarations statements '}' ;
	public final void function() throws RecognitionException {
		Token Identifier1=null;

		try {
			// myCompiler.g:115:5: ( type Identifier '(' ')' '{' l_declarations statements '}' )
			// myCompiler.g:115:7: type Identifier '(' ')' '{' l_declarations statements '}'
			{
			pushFollow(FOLLOW_type_in_function94);
			type();
			state._fsp--;

			Identifier1=(Token)match(input,Identifier,FOLLOW_Identifier_in_function96); 
			match(input,16,FOLLOW_16_in_function98); 
			match(input,17,FOLLOW_17_in_function100); 
			match(input,25,FOLLOW_25_in_function102); 

			         /* output function prologue */
			         prologue((Identifier1!=null?Identifier1.getText():null));
			      
			pushFollow(FOLLOW_l_declarations_in_function118);
			l_declarations();
			state._fsp--;

			pushFollow(FOLLOW_statements_in_function120);
			statements();
			state._fsp--;

			match(input,26,FOLLOW_26_in_function122); 

				     if (TRACEON)
					     System.out.println("type Identifier () {declarations statements}");
				    
					 /* output function epilogue */	  
				     epilogue();
				  
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "function"



	// $ANTLR start "declarations"
	// myCompiler.g:132:1: declarations : ( type Identifier ';' declarations |);
	public final void declarations() throws RecognitionException {
		Token Identifier2=null;
		int type3 =0;

		try {
			// myCompiler.g:133:5: ( type Identifier ';' declarations |)
			int alt2=2;
			switch ( input.LA(1) ) {
			case INT:
				{
				int LA2_1 = input.LA(2);
				if ( (LA2_1==Identifier) ) {
					int LA2_6 = input.LA(3);
					if ( (LA2_6==23) ) {
						alt2=1;
					}
					else if ( (LA2_6==16) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 6, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case FLOAT:
				{
				int LA2_2 = input.LA(2);
				if ( (LA2_2==Identifier) ) {
					int LA2_6 = input.LA(3);
					if ( (LA2_6==23) ) {
						alt2=1;
					}
					else if ( (LA2_6==16) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 6, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case VOID:
				{
				int LA2_3 = input.LA(2);
				if ( (LA2_3==Identifier) ) {
					int LA2_6 = input.LA(3);
					if ( (LA2_6==23) ) {
						alt2=1;
					}
					else if ( (LA2_6==16) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 6, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case CHAR:
				{
				int LA2_4 = input.LA(2);
				if ( (LA2_4==Identifier) ) {
					int LA2_6 = input.LA(3);
					if ( (LA2_6==23) ) {
						alt2=1;
					}
					else if ( (LA2_6==16) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 6, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case EOF:
				{
				alt2=2;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// myCompiler.g:134:4: type Identifier ';' declarations
					{
					pushFollow(FOLLOW_type_in_declarations150);
					type3=type();
					state._fsp--;

					Identifier2=(Token)match(input,Identifier,FOLLOW_Identifier_in_declarations152); 
					match(input,23,FOLLOW_23_in_declarations154); 
					pushFollow(FOLLOW_declarations_in_declarations156);
					declarations();
					state._fsp--;

					 
						    if (TRACEON) System.out.println("declarations: type Identifier : declarations");
							if (symtab.containsKey((Identifier2!=null?Identifier2.getText():null))) {
							    System.out.println("Type Error: " + 
									                Identifier2.getLine() + 
												    ": Redeclared identifier " + (Identifier2!=null?Identifier2.getText():null));
						    } else {
								/* Add ID and its attr_type into the symbol table. */
								symtab.put((Identifier2!=null?Identifier2.getText():null), type3);
						    }
							
							/* code generation */
							switch(type3) {
							case 1: /* Type: integer, size=> 4 bytes, alignment=> 4 byte boundary. */
							        DataCode.add("\t .common " + (Identifier2!=null?Identifier2.getText():null) + ",4,4\n");
									break;
							case 2: /* Type: float, size=> 4 bytes, alignment=> 4 byte boundary. */
							        DataCode.add("\t .common " + (Identifier2!=null?Identifier2.getText():null) + ",4,4\n");
									break;
							default:
							}
						  
					}
					break;
				case 2 :
					// myCompiler.g:157:7: 
					{
					 if (TRACEON) System.out.println("declarations: ");
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declarations"



	// $ANTLR start "l_declarations"
	// myCompiler.g:161:1: l_declarations : ( type Identifier ';' l_declarations |);
	public final void l_declarations() throws RecognitionException {
		try {
			// myCompiler.g:162:5: ( type Identifier ';' l_declarations |)
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==CHAR||LA3_0==FLOAT||LA3_0==INT||LA3_0==VOID) ) {
				alt3=1;
			}
			else if ( (LA3_0==IF||LA3_0==Identifier||LA3_0==26) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// myCompiler.g:163:5: type Identifier ';' l_declarations
					{
					pushFollow(FOLLOW_type_in_l_declarations194);
					type();
					state._fsp--;

					match(input,Identifier,FOLLOW_Identifier_in_l_declarations196); 
					match(input,23,FOLLOW_23_in_l_declarations198); 
					pushFollow(FOLLOW_l_declarations_in_l_declarations200);
					l_declarations();
					state._fsp--;


					      /* If you want to handle local variables, fix it. */ 
					    
					}
					break;
				case 2 :
					// myCompiler.g:168:5: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "l_declarations"



	// $ANTLR start "type"
	// myCompiler.g:171:1: type returns [int attr_type] : ( INT | FLOAT | VOID | CHAR );
	public final int type() throws RecognitionException {
		int attr_type = 0;


		try {
			// myCompiler.g:172:5: ( INT | FLOAT | VOID | CHAR )
			int alt4=4;
			switch ( input.LA(1) ) {
			case INT:
				{
				alt4=1;
				}
				break;
			case FLOAT:
				{
				alt4=2;
				}
				break;
			case VOID:
				{
				alt4=3;
				}
				break;
			case CHAR:
				{
				alt4=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// myCompiler.g:172:7: INT
					{
					match(input,INT,FOLLOW_INT_in_type235); 
					 if (TRACEON) System.out.println("type: INT");  attr_type =1; 
					}
					break;
				case 2 :
					// myCompiler.g:173:7: FLOAT
					{
					match(input,FLOAT,FOLLOW_FLOAT_in_type247); 
					 if (TRACEON) System.out.println("type: FLOAT");  attr_type =2; 
					}
					break;
				case 3 :
					// myCompiler.g:174:7: VOID
					{
					match(input,VOID,FOLLOW_VOID_in_type257); 
					}
					break;
				case 4 :
					// myCompiler.g:175:7: CHAR
					{
					match(input,CHAR,FOLLOW_CHAR_in_type265); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return attr_type;
	}
	// $ANTLR end "type"



	// $ANTLR start "statements"
	// myCompiler.g:178:1: statements : ( statement statements |);
	public final void statements() throws RecognitionException {
		try {
			// myCompiler.g:178:11: ( statement statements |)
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==IF||LA5_0==Identifier) ) {
				alt5=1;
			}
			else if ( (LA5_0==26) ) {
				alt5=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// myCompiler.g:178:13: statement statements
					{
					pushFollow(FOLLOW_statement_in_statements277);
					statement();
					state._fsp--;

					pushFollow(FOLLOW_statements_in_statements279);
					statements();
					state._fsp--;

					}
					break;
				case 2 :
					// myCompiler.g:180:5: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "statements"



	// $ANTLR start "statement"
	// myCompiler.g:182:1: statement returns [int attr_type] : ( Identifier '=' arith_expression ';' | IF '(' arith_expression ')' if_then_statements | Identifier func_argument );
	public final int statement() throws RecognitionException {
		int attr_type = 0;


		Token Identifier4=null;
		Token Identifier7=null;
		ParserRuleReturnScope arith_expression5 =null;
		String func_argument6 =null;

		try {
			// myCompiler.g:183:5: ( Identifier '=' arith_expression ';' | IF '(' arith_expression ')' if_then_statements | Identifier func_argument )
			int alt6=3;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==Identifier) ) {
				int LA6_1 = input.LA(2);
				if ( (LA6_1==24) ) {
					alt6=1;
				}
				else if ( (LA6_1==16) ) {
					alt6=3;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}
			else if ( (LA6_0==IF) ) {
				alt6=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}

			switch (alt6) {
				case 1 :
					// myCompiler.g:183:7: Identifier '=' arith_expression ';'
					{
					Identifier4=(Token)match(input,Identifier,FOLLOW_Identifier_in_statement307); 
					match(input,24,FOLLOW_24_in_statement309); 
					pushFollow(FOLLOW_arith_expression_in_statement311);
					arith_expression5=arith_expression();
					state._fsp--;

					match(input,23,FOLLOW_23_in_statement313); 
					 
						    if (symtab.containsKey((Identifier4!=null?Identifier4.getText():null))) {
						       attr_type = symtab.get((Identifier4!=null?Identifier4.getText():null));
							   memory.put((Identifier4!=null?Identifier4.getText():null), (arith_expression5!=null?((myCompilerParser.arith_expression_return)arith_expression5).value:0));
						    } else {
					         /* Add codes to report and handle this error */
							   System.err.println((Identifier4!=null?Identifier4.getText():null) + " was not declared");
						       attr_type = -2;
						    }
							  
						    if (attr_type != (arith_expression5!=null?((myCompilerParser.arith_expression_return)arith_expression5).attr_type:0)) {
					           System.out.println("Type Error: " + 
							                       (arith_expression5!=null?(arith_expression5.start):null).getLine() +
					 		 	                   ": Type mismatch for the two silde operands in an assignment statement." + attr_type + " : " + (arith_expression5!=null?((myCompilerParser.arith_expression_return)arith_expression5).attr_type:0));
							      attr_type = -2;
					      }
							
							  /* code generation */ 
					      TextCode.add("\t movl " + "$" + (arith_expression5!=null?((myCompilerParser.arith_expression_return)arith_expression5).value:0) + "," + (Identifier4!=null?Identifier4.getText():null) + "(%rip)");
						  
					}
					break;
				case 2 :
					// myCompiler.g:204:7: IF '(' arith_expression ')' if_then_statements
					{
					match(input,IF,FOLLOW_IF_in_statement326); 
					match(input,16,FOLLOW_16_in_statement328); 
					pushFollow(FOLLOW_arith_expression_in_statement330);
					arith_expression();
					state._fsp--;

					match(input,17,FOLLOW_17_in_statement332); 
					pushFollow(FOLLOW_if_then_statements_in_statement334);
					if_then_statements();
					state._fsp--;

					}
					break;
				case 3 :
					// myCompiler.g:205:7: Identifier func_argument
					{
					Identifier7=(Token)match(input,Identifier,FOLLOW_Identifier_in_statement342); 
					pushFollow(FOLLOW_func_argument_in_statement344);
					func_argument6=func_argument();
					state._fsp--;


					      /* code generation */
					      TextCode.add("\t movq " + "$" + func_argument6 + ",%rdi");
					      TextCode.add("\t call " + (Identifier7!=null?Identifier7.getText():null));
					    
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return attr_type;
	}
	// $ANTLR end "statement"



	// $ANTLR start "func_argument"
	// myCompiler.g:214:1: func_argument returns [String label] : ( '(' ')' ';' | '(' a= arith_expression ( ',' b= arith_expression )* ')' ';' );
	public final String func_argument() throws RecognitionException {
		String label = null;


		ParserRuleReturnScope a =null;
		ParserRuleReturnScope b =null;

		try {
			// myCompiler.g:215:5: ( '(' ')' ';' | '(' a= arith_expression ( ',' b= arith_expression )* ')' ';' )
			int alt8=2;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==16) ) {
				int LA8_1 = input.LA(2);
				if ( (LA8_1==17) ) {
					alt8=1;
				}
				else if ( (LA8_1==Floating_point_constant||(LA8_1 >= Identifier && LA8_1 <= STRING_LITERAL)||LA8_1==16||LA8_1==21) ) {
					alt8=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 8, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 8, 0, input);
				throw nvae;
			}

			switch (alt8) {
				case 1 :
					// myCompiler.g:215:7: '(' ')' ';'
					{
					match(input,16,FOLLOW_16_in_func_argument372); 
					match(input,17,FOLLOW_17_in_func_argument374); 
					match(input,23,FOLLOW_23_in_func_argument376); 

					        /* handle function calls here. */
					      
					}
					break;
				case 2 :
					// myCompiler.g:219:7: '(' a= arith_expression ( ',' b= arith_expression )* ')' ';'
					{
					match(input,16,FOLLOW_16_in_func_argument392); 
					pushFollow(FOLLOW_arith_expression_in_func_argument398);
					a=arith_expression();
					state._fsp--;


					         /* handle function calls here. */
					         if ((a!=null?((myCompilerParser.arith_expression_return)a).attr_type:0) == 3) { // handle string type.
					            label = newLabel();
					            DataCode.add(label + ":");
					            DataCode.add("\t .string " + (a!=null?((myCompilerParser.arith_expression_return)a).str:null));
					         }
					      
					// myCompiler.g:228:10: ( ',' b= arith_expression )*
					loop7:
					while (true) {
						int alt7=2;
						int LA7_0 = input.LA(1);
						if ( (LA7_0==20) ) {
							alt7=1;
						}

						switch (alt7) {
						case 1 :
							// myCompiler.g:228:12: ',' b= arith_expression
							{
							match(input,20,FOLLOW_20_in_func_argument420); 
							pushFollow(FOLLOW_arith_expression_in_func_argument426);
							b=arith_expression();
							state._fsp--;

							}
							break;

						default :
							break loop7;
						}
					}

